--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
           <div class="fcol1">
             <h2>Travel</h2>
             <p>Travel you choose the <br> destination, we offer you the <br> experience.</p>
-
+            <div class="icons">
             <img src="img/facebook.png" alt="facebook">
             <img src="img/instagram.png" alt="insta">
             <img src="img/twitter.png" alt="twitter">
             <img src="img/youtube.png" alt="youtube">
-
+          </div>
           </div>
 
           <div class="fcol2">
@@ -87,16 +87,18 @@
           </div>
 
         </div>
-
+        <div class="last">
+          <div class="lastline">
+            <!-- <h2>Travel.in</h2> -->
+            <br />
+            <p>© 2023<a href="#">Travel.in.</a> All Rights
+              Reserved.</p>
+              <a href="#">Terms & Agreements</a><br />
+              <a href="#">Privacy Policy</a> <br />
+          </div>
+        </div>
       </div>
-<div class="lastline">
-      <!-- <h2>Travel.in</h2> -->
-      <br />
-      <span>© 2023<a href="#">Travel.in.</a> All Rights
-        Reserved.</span>
-        <a href="#">Terms & Agreements</a><br />
-        <a href="#">Privacy Policy</a> <br />
-    </div>
+
       </footer>
 </body>
 </html>
