--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
             <div class="left">
               <p class="ratingap">5 best places<br>
                 to visit</p>
-              <div class="arrow_btna">
-                <a href="./components/places.html"><span id="more">More</span>
-                  <img src="./img/vecteezy_right-arrow-icon_15337678.png" alt="right_arrow"></a>
+                <div class="arrow_btna">
+                  <div class="para">
+                    <p id="more">More</p>
+                  </div>
+                  <div class="arrow_icon">
+                    <a href="./components/places.html">                 
+                    <img src="./img/vecteezy_right-arrow-icon_15337678.png" alt="right_arrow">
+                  </a>
+                  </div>
                 
                   </div>
                 </div>
@@ -46,7 +52,6 @@
 
   </div>
     </main>
-
 
 <!-- footer -->
 
